--- a/free-nodes/page-2.htm
+++ b/free-nodes/page-2.htm
@@ -94,6 +94,20 @@
             <!-- welcome -->
                         <div class="welcome">
                 <div class="col-md-3 agileits_welcome_grid_right">
+                    <a href="/free-nodes/2024-5-1-free-v2ray.htm">
+                        <img src="/uploads/20240228/7be10a8674f96dee3b81e43500185f46.webp" alt="5月1日→18.8M/S|2024年最新免费节点Shadowrocket/SSR/Clash/V2ray订阅链接地址" class="img-responsive" />
+                    </a>
+                </div>
+                <div class="col-md-9 agileits_welcome_grid_left">
+                    <a href="/free-nodes/2024-5-1-free-v2ray.htm">
+                        <h3>5月1日→18.8M/S|2024年最新免费节点Shadowrocket/SSR/Clash/V2ray订阅链接地址</h3>
+                    </a>
+                    <p>这一次的节点更新覆盖了日本、美国、新加坡、香港、加拿大、韩国、欧洲等地区,最高速度可达18.8 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</i></p>
+                </div>
+                <div class="clearfix"> </div>
+            </div>
+                        <div class="welcome">
+                <div class="col-md-3 agileits_welcome_grid_right">
                     <a href="/free-nodes/2024-4-30-clash-v2ray-ss-ssr.htm">
                         <img src="/uploads/20240228/7ddf641cb9c3a427b5c3f54540cf62b6.webp" alt="4月30日→19.3M/S|2024年最新免费节点Shadowrocket/V2ray/Clash/SSR订阅链接地址" class="img-responsive" />
                     </a>
@@ -218,20 +232,6 @@
                 </div>
                 <div class="clearfix"> </div>
             </div>
-                        <div class="welcome">
-                <div class="col-md-3 agileits_welcome_grid_right">
-                    <a href="/free-nodes/2024-4-21-free-subscribe-node.htm">
-                        <img src="/uploads/20240228/cf4b7d70d0b73f0bfc03a06c4aff020d.webp" alt="4月21日→20.3M/S|2024年最新免费节点V2ray/Clash/Shadowrocket/SSR订阅链接" class="img-responsive" />
-                    </a>
-                </div>
-                <div class="col-md-9 agileits_welcome_grid_left">
-                    <a href="/free-nodes/2024-4-21-free-subscribe-node.htm">
-                        <h3>4月21日→20.3M/S|2024年最新免费节点V2ray/Clash/Shadowrocket/SSR订阅链接</h3>
-                    </a>
-                    <p>这一次的节点更新覆盖了欧洲、日本、美国、加拿大、香港、新加坡、韩国等地区,最高速度可达20.3 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</i></p>
-                </div>
-                <div class="clearfix"> </div>
-            </div>
                         <ul class="pagination"><li><a href="/free-nodes/">&laquo;</a></li> <li><a href="/free-nodes/">1</a></li><li class="active"><span>2</span></li><li><a href="/free-nodes/page-3.htm">3</a></li><li><a href="/free-nodes/page-4.htm">4</a></li><li><a href="/free-nodes/page-5.htm">5</a></li><li><a href="/free-nodes/page-6.htm">6</a></li><li><a href="/free-nodes/page-7.htm">7</a></li><li><a href="/free-nodes/page-8.htm">8</a></li> <li><a href="/free-nodes/page-3.htm">&raquo;</a></li></ul>            <!-- //welcome -->
         </div>
         <div class="col-md-3">
@@ -241,6 +241,7 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
+                        <li class="py-2"><a href="/free-nodes/2024-5-11-free-clash.htm" title="5月11日→22.4M/S|2024年最新免费节点Shadowrocket/SSR/V2ray/Clash订阅链接地址">5月11日→22.4M/S|2024年最新免费节点Shadowrocket/SSR/V2ray/Clash订阅链接地址</a></li>
                         <li class="py-2"><a href="/free-nodes/2024-5-10-free-node-subscribe-links.htm" title="5月10日→21M/S|2024年最新免费节点SSR/Shadowrocket/Clash/V2ray订阅链接地址">5月10日→21M/S|2024年最新免费节点SSR/Shadowrocket/Clash/V2ray订阅链接地址</a></li>
                         <li class="py-2"><a href="/free-nodes/2024-5-9-clash-windows.htm" title="5月9日→19.8M/S|2024年最新免费节点V2ray/Clash/SSR/Shadowrocket订阅链接地址">5月9日→19.8M/S|2024年最新免费节点V2ray/Clash/SSR/Shadowrocket订阅链接地址</a></li>
                         <li class="py-2"><a href="/free-nodes/2024-5-8-node-share.htm" title="5月8日→21.2M/S|2024年最新免费节点V2ray/Clash/SSR/Shadowrocket订阅链接地址">5月8日→21.2M/S|2024年最新免费节点V2ray/Clash/SSR/Shadowrocket订阅链接地址</a></li>
@@ -250,7 +251,6 @@
                         <li class="py-2"><a href="/free-nodes/2024-5-4-clash-node-daily-updates.htm" title="5月4日→22.7M/S|2024年最新免费节点SSR/V2ray/Clash/Shadowrocket订阅链接地址">5月4日→22.7M/S|2024年最新免费节点SSR/V2ray/Clash/Shadowrocket订阅链接地址</a></li>
                         <li class="py-2"><a href="/free-nodes/2024-5-3-clash-v2ray-ss-ssr.htm" title="5月3日→20.3M/S|2024年最新免费节点Shadowrocket/Clash/SSR/V2ray订阅链接地址">5月3日→20.3M/S|2024年最新免费节点Shadowrocket/Clash/SSR/V2ray订阅链接地址</a></li>
                         <li class="py-2"><a href="/free-nodes/2024-5-2-free-subscribe-node.htm" title="5月2日→19.3M/S|2024年最新免费节点SSR/Shadowrocket/V2ray/Clash订阅链接地址">5月2日→19.3M/S|2024年最新免费节点SSR/Shadowrocket/V2ray/Clash订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-5-1-free-v2ray.htm" title="5月1日→18.8M/S|2024年最新免费节点Shadowrocket/SSR/Clash/V2ray订阅链接地址">5月1日→18.8M/S|2024年最新免费节点Shadowrocket/SSR/Clash/V2ray订阅链接地址</a></li>
                     </ul>
     </div>
 </div>
